[tool.poetry]
name = "dexpv2"
version = "0.1.0"
description = ""
authors = ["Jordao Bragantini <jordao.bragantini@czbiohub.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# cupy = "^12.0.0"
numpy = "^1.24.2"
scipy = "^1.10.1"
tifffile = "^2023.3.21"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
