[tool.poetry]
name = "dexpv2"
version = "0.1.0"
description = ""
authors = ["Jordao Bragantini <jordao.bragantini@czbiohub.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# cupy = "^12.0.0"
numpy = "<1.24"
scipy = "^1.10.1"
tifffile = ">=2023.2.3"
click = "^8.1.3"
torch = "^2.0.0"
torchvision = "^0.15.1"
antspyx = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
