[project]
name = "dexpv2"
version = "0.1.1"
description = ""
readme = "README.md"
authors = [
    {name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org"}
]
dependencies = [
    "numpy",
    "scipy>=1.10.1",
    "tifffile>=2023.2.3",
    "click>=8.1.3,<9.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.1",
    "antspyx>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
